_k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
  labels:
    app.kubernetes.io/name: demoapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: demoapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demoapp
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: demoapp
          image: ghcr.io/ops-nc/demoapp:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
