_k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
  labels:
    app.kubernetes.io/name: demoapp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demoapp
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
